implemented logging and pagination on user controller